# tauri-bevy-svelte-app

./: README.md  package.json  svelte.config.mjs  vite.config.js
src/: App.svelte  index.html  main.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/game/: counter.rs  mod.rs
src/components/: Counter.svelte
src/routes/: Files.svelte  Home.svelte  Settings.svelte
src/windows/settings/: Settings.svelte  settings.html  settings.ts
